# pecho

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push.yaml  push.yml  release.yml
examples/: click_echo.py  custom_print_function.py  progress.py
pecho/: __init__.py  __init__.pyi
tests/: test_all.py  test_click_echo.py  test_custom_print.py  test_print.py
