[tool.poetry]
name = "pecho"
version = "0.5.2"
description = "Easy way to write things like status bars"
authors = ["Nihaal Sangha <me@niha.al>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nihaals/pecho"

[tool.poetry.dependencies]
python = "^3.6"
colorama = { version = "^0.4.4", optional = true }

[tool.poetry.extras]
windows = ["colorama"]

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38", "py39"]
skip-string-normalization = true
include = '\.pyi?$'

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
